# cddl_gen

./: MANIFEST.in  MIGRATION_GUIDE.md  setup.py
.github/workflows/: run-tests.yaml
cddl_gen/: cddl_gen.py
samples/pet/src/: pet_decode.c  pet_encode.c
src/: cbor_decode.c  zcbor_decode.c
tests/cases/: strange.cddl
tests/cbor_decode/: test.sh
tests/cbor_decode/test3_simple/: CMakeLists.txt
tests/cbor_decode/test3_simple/src/: main.c
tests/cbor_decode/test5_strange/: CMakeLists.txt
tests/cbor_decode/test5_strange/src/: main.c
tests/cbor_decode/test8_suit12/: CMakeLists.txt
tests/cbor_decode/test8_suit12/src/: main.c
tests/cbor_encode/test3_strange/: CMakeLists.txt
tests/cbor_encode/test3_strange/src/: main.c
tests/decode/test5_corner_cases/src/: main.c
tests/unit/test1_unit_tests/src/: main.c
zcbor/: zcbor.py
